[gd_scene load_steps=7 format=2]

[ext_resource path="res://systems/dialogue_handler/renderers/DialogueBoxRenderer.gd" type="Script" id=1]
[ext_resource path="res://fonts/adobe_source_san_pro_ttf/godot_font_format/source_sans_pro_regular_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/adobe_source_san_pro_ttf/godot_font_format/source_sans_pro_italic_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/adobe_source_san_pro_ttf/godot_font_format/source_sans_pro_bold_italic_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/adobe_source_san_pro_ttf/godot_font_format/source_sans_pro_bold_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://systems/dialogue_handler/renderers/DBRChoiceButton.tscn" type="PackedScene" id=6]

[node name="DialogueBoxRenderer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -120.0
margin_right = 250.0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DialogueContainer"]
margin_right = 500.0
margin_bottom = 100.0
color = Color( 0.180392, 0.192157, 0.333333, 1 )

[node name="MarginContainer" type="MarginContainer" parent="DialogueContainer"]
margin_right = 500.0
margin_bottom = 100.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 500.0
margin_bottom = 100.0
custom_constants/separation = 8

[node name="CharacterName" type="RichTextLabel" parent="DialogueContainer/MarginContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 18.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Character Name"
text = "Character Name"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContent" type="RichTextLabel" parent="DialogueContainer/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 490.0
margin_bottom = 48.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Dialogue content [b]of some[/b] kind."
text = "Dialogue content of some kind."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypewriterTimer" type="Timer" parent="DialogueContainer/MarginContainer/VBoxContainer/DialogueContent"]
one_shot = true

[node name="BackgroundScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="ChoiceContainer" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -50.0
margin_right = 250.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ChoiceContainer"]
margin_right = 500.0
margin_bottom = 100.0
color = Color( 0.180392, 0.192157, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ChoiceContainer"]
margin_right = 500.0
margin_bottom = 100.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ChoiceContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="ChoiceDescription" type="RichTextLabel" parent="ChoiceContainer/MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 15.0
text = "Optional choice description."
fit_content_height = true

[node name="ChoiceButtonContainer" type="VBoxContainer" parent="ChoiceContainer/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 480.0
margin_bottom = 39.0
custom_constants/separation = 4

[node name="ChoiceButton" parent="ChoiceContainer/MarginContainer/VBoxContainer/ChoiceButtonContainer" instance=ExtResource( 6 )]
